--- a/app/assets/stylesheets/user/profile.scss
+++ b/app/assets/stylesheets/user/profile.scss
@@ -2,6 +2,7 @@
   background: #f5f5f5;
   padding-top: 40px;
   width: 100%;
+  text-align: center;
   .both-content{
     display:inline-block;
     position: relative;
