--- a/app/assets/stylesheets/user/user_info_register.scss
+++ b/app/assets/stylesheets/user/user_info_register.scss
@@ -2,6 +2,7 @@
   padding-top: 40px;
   width: 100%;
   background: #f5f5f5;
+  text-align: center;
   .both-content{
     display:inline-block;
     position: relative;
