--- a/app/views/layouts/_side-barMypage.html.haml
+++ b/app/views/layouts/_side-barMypage.html.haml
@@ -3,7 +3,7 @@
     %ul.sidebar-list-1
       %li
         .text
-          = link_to 'マイページ', mypage_profile_path, class: "side-link-text"
+          = link_to 'マイページ', mypage_user_page_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
       %li
