--- a/app/assets/stylesheets/red-btn.scss
+++ b/app/assets/stylesheets/red-btn.scss
@@ -6,6 +6,8 @@
   text-align: center;
   border-radius: 50%;
   float: right;
+  right: 20px;
+  bottom: 20px;
   h1 {
     font-size: 22px;
     color: rgb(255, 255, 255);
