--- a/app/assets/stylesheets/red-btn.scss
+++ b/app/assets/stylesheets/red-btn.scss
@@ -13,7 +13,7 @@
     color: rgb(255, 255, 255);
   }
   svg {
-    margin: 8px 50px 0px;
+    margin: 8px 50px 0;
     width: 60px;
     height: 54px;
     color: rgb(255, 255, 255);
