--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -21,51 +21,16 @@
         =link_to "もっと見る ＞", class: "main-contents__header--more"
       .main-contents__goods
         %ul
-          %li
-            .main-contents-box
-              %a.contents-item{href: "#"}
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span 粉雪舞う季節はいつもすれ違い人混みに紛れても同じ空見てるのに。風に吹かれて似たように凍えるのに。些細な言い合いもなくてララライララライ
-          %li
-            .main-contents-box
-              %a.contents-item{href: "#"}
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-          %li
-            .main-contents-box
-              %a.contents-item{href: "#"}
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-          %li
-            .main-contents-box
-              %a.contents-item{href: "#"}
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-          %li
-            .main-contents-box
-              %a.contents-item{href: "#"}
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
+          - @products.each do |product|
+            %li
+              .main-contents-box
+                =link_to root_path, class: "contents-item" do
+                  .contents-item__image
+                    .contents-item__image--price
+                      %span= product.price
+                  .contents-item__index
+                    .contents-item__index--name 
+                      %span= product.name
       .main-contents__header
         .main-contents__header--name
           メンズ新着アイテム
