--- a/app/views/products/myproduct.html.haml
+++ b/app/views/products/myproduct.html.haml
@@ -1,18 +1,79 @@
-.main-contents__goods
-  %ul
-    - @products.each do |product|
-      %li
-        .main-contents-box
-          =link_to my_product_detail_product_path(product.id), class: "contents-item" do
-            .contents-item__image
-              .contents-item__image--price
-                ¥
-                %span= product.price
-              = image_tag product.image_url if product.image.present?
-            .contents-item__index
-              .contents-item__index--name 
-                %span= product.name
-.main-contents__header
-  .main-contents__header--name
-    メンズ新着アイテム
-  =link_to "もっと見る ＞", class: "main-contents__header--more"
+= render 'layouts/header'
+.mine-content
+  .mine-content__bar
+    = render 'layouts/side-barMypage'
+    .mine-product
+      %section.mine-product__list
+        %h2.mine-product__head
+        %ul.tabs
+          %li.tab-list.tab-now
+            = link_to class: "product-now"
+          %li.tab-list
+            = link_to class: "product-dealing"
+          %li.tab-list
+            = link_to class: "product-soldout"
+        .tab-content
+          %ul.mine-item-list
+          - @products.each do |product|
+            %li.product
+              = link_to my_product_detail_product_path(product.id), class: "mine-item" do
+                %figure
+                  = image_tag product.image_url if product.image.present?
+                .mine-item-summary
+                  .mine-item-summary__text
+                  .mine-item-summary__accesory
+                    %span.liking-count
+                      %i.far.fa-heart
+                      %span.many
+                    %span.liking-count
+                      %i.fas.fa-comment-dots
+                      %span.many
+                    .mode
+                  %i.fas.fa-arrow-circle-right
+            %li.product
+              = link_to my_product_detail_product_path(product.id), class: "mine-item" do
+                %figure
+                  -# = image_tag product.image_url if product.image.present?
+                .mine-item-summary
+                  .mine-item-text
+                  .mine-item-accesory
+                    %span.liking-count
+                      %i.far.fa-heart
+                      %span.many
+                    %span.liking-count
+                      %i.fas.fa-comment-dots
+                      %span.many
+                    .mode
+                  %i.fas.fa-arrow-circle-left
+      %ul.mypage-kaminari
+        %li
+          = link_to class: "read-more" do
+            %i.fas.fa-arrow-circle-left
+      %ul.mypage-kaminari
+        %li
+          = link_to class: "read-more" do
+            %i.fas.fa-arrow-circle-right
+
+
+          
+
+
+
+      
+        -# %li
+        -#   .main-contents-box
+        -#     =link_to  class: "contents-item" do
+        -#       .contents-item__image
+        -#         .contents-item__image--price
+        -#           ¥
+        -#           %span= product.price
+        -#         = image_tag product.image_url if product.image.present?
+        -#       .contents-item__index
+        -#         .contents-item__index--name 
+        -#           %span= product.name
+  -# .main-contents__header
+  -#   .main-contents__header--name
+  -#     メンズ新着アイテム
+  -#   =link_to "もっと見る ＞", class: "main-contents__header--more"
+= render 'layouts/footer'
+= render 'devise/shared/red-btn'
