--- a/app/assets/stylesheets/products/_myproduct.scss
+++ b/app/assets/stylesheets/products/_myproduct.scss
@@ -1,56 +1,175 @@
-.mine-content {
-  margin: 40px auto 0;
-  width: 1020px;
-  &__bar {
-    .mine-product {
-      &__list {
-        h2.mine-product__head {
-        }
-        ul.tabs {
-          li.tab-list {
-            a {
+@mixin awesome {
+  font-weight: bold;
+  display: inline-block;
+  font: normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+}
+body {
+  background: #f5f5f5;
+  .mine-content {
+    margin: 40px auto 0;
+    width: 1020px;
+    display: block;
+    &__bar {
+      display: flex;
+      .mine-product {
+        float: right;
+        width: 700px;
+        height: 100%;
+        &__list {
+          margin: 0;
+          background: white;
+          h2.mine-product__head {
+            padding: 0 16px;
+            background: #fafafa;
+            font-size: 16px;
+            line-height: 72px;
+          }
+          ul.tabs {
+            border: 0;
+            background: #fafafa;
+            font-size: 0;
+            list-style: none;
+            display: flex;
+            li.tab-list {
+              width: 33.3%;
+              background-color: #f5f5f5;
+              text-align: center;
+              color: black;
+              a.product {
+                position: relative;
+                display: block;
+                color: #333;
+                font-size: 16px;
+                line-height: 72px;
+                text-decoration: none;
+              }
+              a.product:hover {
+                opacity: 0.7;
+              }
+            }
+            .tab-list:active {
+              border-top: 2px solid #ea352d;
+              background-color: white;
             }
           }
-          .tab-now {
-          }
-        }
-        .tab-content {
-          ul.mine-item-list {
-            li.product {
-              a.mine-item {
-                figure {
-                  img.mine-item-image {
+          .tab-content {
+            ul.mine-item-list {
+              display: block;
+              list-style: none;
+              li.product {
+                border-bottom: 1px solid #eee;
+                position: relative;
+                a.mine-item {
+                  text-decoration: none;
+                  display: block;
+                  padding: 16px;
+                  color: #333;
+                  figure.photo {
+                    position: relative;
+                    overflow: hidden;
+                    float: left;
+                    width: 48px;
+                    height: 48px;
+                    margin: 0;
+                    img {
+                      position: absolute;
+                      z-index: 1;
+                      width: 100%;
+                      vertical-align: middle;
+                    }
                   }
-                }
-                .mine-item-summary {
-                  &__text {
-                  }
-                  &__accsesory {
-                    span.liking-count {
-                      i {
+                  .mine-item-summary {
+                    margin: 0 40px 0 68px;
+                    &__text {
+                      overflow: hidden;
+                      display: block;
+                      max-height: 4.4em;
+                      line-height: 1.5;
+                    }
+                    &__accsesory {
+                      span.liking-count {
+                        vertical-align: 2px;
+                        margin: 0 6px 0 0;
+                        i.far.fa-heart {
+                          @include awesome;
+                        }
+                        i.far.fa-comment {
+                          @include awesome;
+                        }
+                        span.many {
+                          vertical-align: middle;
+                          margin: 0 0 0 2px;
+                          font-size: 16px;
+                          color: #888;
+                        }
+                      }
+                      .mode {
+                        background: #0099e8;
+                        display: inline;
+                        margin: 8px 0 0 0;
+                        padding: 5px 6px;
+                        border-radius: 2px;
+                        font-size: 12px;
+                        color: #fff;
                         font-weight: bold;
-                        display: inline-block;
-                        font: normal 14px/1 FontAwesome;
-                        font-size: inherit;
-                        text-rendering: auto;
-                      }
-                      span.many {
                       }
                     }
-                    .mode {
+                    i.fas.fa-arrow-circle-right {
+                      position: absolute;
+                      top: 40%;
+                      right: 16px;
+                      vertical-align: middle;
+                      @include awesome;
                     }
-                  }
-                  i.fas {
+                    i.fas.fa-arrow-circle-left {
+                      position: absolute;
+                      top: 50%;
+                      right: 16px;
+                      @include awesome;
+                    }
                   }
                 }
               }
             }
           }
         }
-      }
-      ul.mypage-kaminari {
-        li {
-          a.read-more {
+        ul.mypage-kaminari {
+          margin: 40px 0 0;
+          height: 44px;
+          position: relative;
+          font-size: 0;
+          text-align: center;
+          list-style: none;
+          li.more {
+            display: inline-block;
+            width: 44px;
+            height: 44px;
+            border-radius: 4px;
+            background: #fff;
+            border: 1px solid #ccc;
+            font-size: 14px;
+            line-height: 42px;
+            position: absolute;
+            top: 0;
+            cursor: pointer;
+            a.read-more {
+              display: block;
+              color: #333;
+              i {
+                @include awesome;
+              }
+            }
+          }
+          li.more:hover {
+            background: #fafafa;
+          }
+          li.more-left {
+            left: 0;
+          }
+          li.more-right {
+            right: 0;
           }
         }
       }
