--- a/app/views/products/myproduct.html.haml
+++ b/app/views/products/myproduct.html.haml
@@ -1,79 +1,49 @@
 = render 'layouts/header'
-.mine-content
-  .mine-content__bar
-    = render 'layouts/side-barMypage'
-    .mine-product
-      %section.mine-product__list
-        %h2.mine-product__head
-        %ul.tabs
-          %li.tab-list.tab-now
-            = link_to class: "product-now"
-          %li.tab-list
-            = link_to class: "product-dealing"
-          %li.tab-list
-            = link_to class: "product-soldout"
-        .tab-content
-          %ul.mine-item-list
-          - @products.each do |product|
-            %li.product
-              = link_to my_product_detail_product_path(product.id), class: "mine-item" do
-                %figure
-                  = image_tag product.image_url if product.image.present?
-                .mine-item-summary
-                  .mine-item-summary__text
-                  .mine-item-summary__accesory
-                    %span.liking-count
-                      %i.far.fa-heart
-                      %span.many
-                    %span.liking-count
-                      %i.fas.fa-comment-dots
-                      %span.many
-                    .mode
-                  %i.fas.fa-arrow-circle-right
-            %li.product
-              = link_to my_product_detail_product_path(product.id), class: "mine-item" do
-                %figure
-                  -# = image_tag product.image_url if product.image.present?
-                .mine-item-summary
-                  .mine-item-text
-                  .mine-item-accesory
-                    %span.liking-count
-                      %i.far.fa-heart
-                      %span.many
-                    %span.liking-count
-                      %i.fas.fa-comment-dots
-                      %span.many
-                    .mode
-                  %i.fas.fa-arrow-circle-left
-      %ul.mypage-kaminari
-        %li
-          = link_to class: "read-more" do
-            %i.fas.fa-arrow-circle-left
-      %ul.mypage-kaminari
-        %li
-          = link_to class: "read-more" do
-            %i.fas.fa-arrow-circle-right
-
-
-          
-
-
-
-      
-        -# %li
-        -#   .main-contents-box
-        -#     =link_to  class: "contents-item" do
-        -#       .contents-item__image
-        -#         .contents-item__image--price
-        -#           ¥
-        -#           %span= product.price
-        -#         = image_tag product.image_url if product.image.present?
-        -#       .contents-item__index
-        -#         .contents-item__index--name 
-        -#           %span= product.name
-  -# .main-contents__header
-  -#   .main-contents__header--name
-  -#     メンズ新着アイテム
-  -#   =link_to "もっと見る ＞", class: "main-contents__header--more"
+%body
+  .mine-content
+    .mine-content__bar
+      = render 'layouts/side-barMypage'
+      .mine-product
+        .mine-product__list
+          %h2.mine-product__head 出品した商品
+          %ul.tabs
+            %li.tab-list
+              = link_to myproduct_product_path, class: "product now" do
+                出品中
+            %li.tab-list
+              = link_to myproduct_product_path, class: "product dealing" do
+                取引中
+            %li.tab-list
+              = link_to myproduct_product_path, class: "product soldout" do
+                売却済み
+          .tab-content
+            %ul.mine-item-list
+              - @products.each do |product|
+                %li.product
+                  = link_to my_product_detail_product_path(product.id), class: "mine-item" do
+                    %figure.photo
+                      = image_tag product.image_url if product.image.present?
+                    .mine-item-summary
+                      .mine-item-summary__text
+                        %span= product.name
+                      .mine-item-summary__accesory
+                        %span.liking-count
+                          %i.far.fa-heart
+                          %span.many
+                            352
+                        %span.liking-count
+                          %i.far.fa-comment
+                          %span.many
+                            1
+                        .mode
+                          出品中
+                      %i.fas.fa-arrow-circle-right
+        %ul.mypage-kaminari
+          %li.more.more-left
+            = link_to myproduct_product_path, class: "read-more" do
+              %i.fas.fa-arrow-circle-left
+          %li.more.more-right
+            = link_to myproduct_product_path, class: "read-more" do
+              %i.fas.fa-arrow-circle-right
 = render 'layouts/footer'
 = render 'devise/shared/red-btn'
