--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -42,7 +42,7 @@
                 %li.text
                   Facebookで登録する
             %ul.main-bottom-box__textBox-google
-              = link_to 'https://accounts.google.com/signin/oauth/oauthchooseaccount?client_id=238694260676-l0gp5j3hs9p8l2hjmnt126q0b4iin34r.apps.googleusercontent.com&as=Mr9DXJJzs11fRn6hRPYKfw&destination=https%3A%2F%2Fwww.mercari.com&approval_state=!ChRoWFYzOV9XREVvQjdFcWVZalVRShIfdzJHdUNLempXa2tXNEJxcmlYbTVkb215elVQYTZCWQ∙AJDr988AAAAAXdfBLeeD0Ov3cOYX5KKhVGbpOzlqi-Ur&oauthgdpr=1&xsrfsig=ChkAeAh8Ty3MVHPBR5fkd_oGnTc6fCpH9QspEg5hcHByb3ZhbF9zdGF0ZRILZGVzdGluYXRpb24SBXNvYWN1Eg9vYXV0aHJpc2t5c2NvcGU&flowName=GeneralOAuthFlow' do
+              = link_to user_google_oauth2_omniauth_authorize_path do
                 =fa_icon 'google'
                 %li.text
                   Googleで登録する
