--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -47,19 +47,19 @@
                   .select-box
                     = f.select :category, class: "select-default" do
                       %option{selected: "selected"} --
-                      %option{:value => "1"} レディース
-                      %option{:value => "2"} メンズ
-                      %option{:value => "3"} ベビー・キッズ
-                      %option{:value => "4"} インテリア・住まい・小物
-                      %option{:value => "5"} 本・音楽・ゲーム
-                      %option{:value => "6"} おもちゃ・ホビー・グッズ
-                      %option{:value => "7"} コスメ・香水・美容
-                      %option{:value => "8"} 家電・スマホ・カメラ
-                      %option{:value => "9"} スポーツ・レジャー
-                      %option{:value => "10"} ハンドメイド
-                      %option{:value => "11"} チケット
-                      %option{:value => "12"} 自動車・オートバイ
-                      %option{:value => "13"} その他
+                      %option{:value => "レディース"} レディース
+                      %option{:value => "メンズ"} メンズ
+                      %option{:value => "ベビー・キッズ"} ベビー・キッズ
+                      %option{:value => "インテリア・住まい・小物"} インテリア・住まい・小物
+                      %option{:value => "本・音楽・ゲーム"} 本・音楽・ゲーム
+                      %option{:value => "おもちゃ・ホビー・グッズ"} おもちゃ・ホビー・グッズ
+                      %option{:value => "コスメ・香水・美容"} コスメ・香水・美容
+                      %option{:value => "家電・スマホ・カメラ"} 家電・スマホ・カメラ
+                      %option{:value => "スポーツ・レジャー"} スポーツ・レジャー
+                      %option{:value => "ハンドメイド"} ハンドメイド
+                      %option{:value => "チケット"} チケット
+                      %option{:value => "自動車・オートバイ"} 自動車・オートバイ
+                      %option{:value => "その他"} その他
                     %i.fas.fa-republican
                     - if @product.errors.any?
                       %p.error-message 選択してください
@@ -70,12 +70,12 @@
                   %i.fas.fa-republican
                     = f.select :condition, class: "select-default" do
                       %option{selected: "selected"} --
-                      %option{:value => "1"} 新品、未使用
-                      %option{:value => "2"} 未使用に近い
-                      %option{:value => "3"} 目立った傷や汚れなし
-                      %option{:value => "4"} やや傷や汚れあり
-                      %option{:value => "5"} 傷や汚れあり
-                      %option{:value => "6"} 全体的に状態が悪い
+                      %option{:value => "新品、未使用"} 新品、未使用
+                      %option{:value => "未使用に近い"} 未使用に近い
+                      %option{:value => "目立った傷や汚れなし"} 目立った傷や汚れなし
+                      %option{:value => "やや傷や汚れあり"} やや傷や汚れあり
+                      %option{:value => "傷や汚れあり"} 傷や汚れあり
+                      %option{:value => "全体的に状態が悪い"} 全体的に状態が悪い
                       - if @product.errors.any?
                         %p.error-message 選択してください
                     .product-details
@@ -92,8 +92,8 @@
                   %i.fas.fa-republican
                   = f.select :shipping_charge, class: "select-default" do
                     %option{selected: "selected"} --
-                    %option{:value => "1"} 送料込み(出品者負担)
-                    %option{:value => "2"} 着払い(購入者負担)
+                    %option{:value => "送料込み(出品者負担)"} 送料込み(出品者負担)
+                    %option{:value => "着払い(購入者負担)"} 着払い(購入者負担)
                     - if @product.errors.any?
                       %p.error-message 選択してください
                 .transportation-name
@@ -105,53 +105,53 @@
                   -# 後ほどactive_hashを利用、現在仮置き
                   = f.select :shipping_place, class: "select-default" do
                     %option{selected: "selected"} --
-                    %option{:value => "1"} 北海道
-                    %option{:value => "2"} 青森県
-                    %option{:value => "3"} 岩手県
-                    %option{:value => "4"} 宮城県
-                    %option{:value => "5"} 秋田県
-                    %option{:value => "6"} 山形県
-                    %option{:value => "7"} 福島県
-                    %option{:value => "8"} 茨城県
-                    %option{:value => "9"} 栃木県
-                    %option{:value => "10"} 群馬県
-                    %option{:value => "11"} 埼玉県
-                    %option{:value => "12"} 千葉県
-                    %option{:value => "13"} 東京都
-                    %option{:value => "14"} 神奈川県
-                    %option{:value => "15"} 新潟県
-                    %option{:value => "16"} 富山県
-                    %option{:value => "17"} 石川県
-                    %option{:value => "18"} 福井県
-                    %option{:value => "19"} 山梨県
-                    %option{:value => "20"} 長野県
-                    %option{:value => "21"} 岐阜県
-                    %option{:value => "22"} 静岡県
-                    %option{:value => "23"} 愛知県
-                    %option{:value => "24"} 三重県
-                    %option{:value => "25"} 滋賀県
-                    %option{:value => "26"} 京都府
-                    %option{:value => "27"} 大阪府
-                    %option{:value => "28"} 兵庫県
-                    %option{:value => "29"} 奈良県
-                    %option{:value => "30"} 和歌山県
-                    %option{:value => "31"} 鳥取県
-                    %option{:value => "32"} 島根県
-                    %option{:value => "33"} 岡山県
-                    %option{:value => "34"} 広島県
-                    %option{:value => "35"} 山口県
-                    %option{:value => "36"} 徳島県
-                    %option{:value => "37"} 香川県
-                    %option{:value => "38"} 愛媛県
-                    %option{:value => "39"} 高知県
-                    %option{:value => "40"} 福岡県
-                    %option{:value => "41"} 佐賀県
-                    %option{:value => "42"} 長崎県
-                    %option{:value => "43"} 熊本県
-                    %option{:value => "44"} 大分県
-                    %option{:value => "45"} 宮崎県
-                    %option{:value => "46"} 鹿児島県
-                    %option{:value => "47"} 沖縄県
+                    %option{:value => "北海道"} 北海道
+                    %option{:value => "青森県"} 青森県
+                    %option{:value => "岩手県"} 岩手県
+                    %option{:value => "宮城県"} 宮城県
+                    %option{:value => "秋田県"} 秋田県
+                    %option{:value => "山形県"} 山形県
+                    %option{:value => "福島県"} 福島県
+                    %option{:value => "茨城県"} 茨城県
+                    %option{:value => "栃木県"} 栃木県
+                    %option{:value => "群馬県"} 群馬県
+                    %option{:value => "埼玉県"} 埼玉県
+                    %option{:value => "千葉県"} 千葉県
+                    %option{:value => "東京都"} 東京都
+                    %option{:value => "神奈川県"} 神奈川県
+                    %option{:value => "新潟県"} 新潟県
+                    %option{:value => "富山県"} 富山県
+                    %option{:value => "石川県"} 石川県
+                    %option{:value => "福井県"} 福井県
+                    %option{:value => "山梨県"} 山梨県
+                    %option{:value => "長野県"} 長野県
+                    %option{:value => "岐阜県"} 岐阜県
+                    %option{:value => "静岡県"} 静岡県
+                    %option{:value => "愛知県"} 愛知県
+                    %option{:value => "三重県"} 三重県
+                    %option{:value => "滋賀県"} 滋賀県
+                    %option{:value => "京都府"} 京都府
+                    %option{:value => "大阪府"} 大阪府
+                    %option{:value => "兵庫県"} 兵庫県
+                    %option{:value => "奈良県"} 奈良県
+                    %option{:value => "和歌山県"} 和歌山県
+                    %option{:value => "鳥取県"} 鳥取県
+                    %option{:value => "島根県"} 島根県
+                    %option{:value => "岡山県"} 岡山県
+                    %option{:value => "広島県"} 広島県
+                    %option{:value => "山口県"} 山口県
+                    %option{:value => "徳島県"} 徳島県
+                    %option{:value => "香川県"} 香川県
+                    %option{:value => "愛媛県"} 愛媛県
+                    %option{:value => "高知県"} 高知県
+                    %option{:value => "福岡県"} 福岡県
+                    %option{:value => "佐賀県"} 佐賀県
+                    %option{:value => "長崎県"} 長崎県
+                    %option{:value => "熊本県"} 熊本県
+                    %option{:value => "大分県"} 大分県
+                    %option{:value => "宮崎県"} 宮崎県
+                    %option{:value => "鹿児島県"} 鹿児島県
+                    %option{:value => "沖縄県"} 沖縄県
                     - if @product.errors.any?
                       %p.error-message 選択してください
                 .transportation-name
@@ -161,9 +161,9 @@
                 .select-box
                   = f.select :shipping_date, class: "select-default" do
                     %option{selected: "selected"} --
-                    %option{:value => "1"} 1~2日で発送
-                    %option{:value => "2"} 2~3日で発送
-                    %option{:value => "3"} 4~7日で発送
+                    %option{:value => "1~2日で発送"} 1~2日で発送
+                    %option{:value => "2~3日で発送"} 2~3日で発送
+                    %option{:value => "4~7日で発送"} 4~7日で発送
                     - if @product.errors.any?
                       %p.error-message 選択してください
             .price
