--- a/app/views/products/search.html.haml
+++ b/app/views/products/search.html.haml
@@ -7,24 +7,11 @@
       = image_tag "slide_5.png", class: "slide-image"
     .slideB
       = image_tag "slide-a.png", class: "slide-image"
-  .top-nav
-    .Category
-      人気のカテゴリー
-    %ul.Categorys
-      %li
-        =link_to "レディース", class: "Categorys__list--item"
-      %li
-        =link_to "メンズ", class: "Categorys__list--item"
-      %li
-        =link_to "家電・スマホ・カメラ", class: "Categorys__list--item"
-      %li
-        =link_to "おもちゃ・ホビー・グッズ", class: "Categorys__list--item"
   .main-body
     .main-contents
       .main-contents__top
         .main-contents__header--name
-          レディース新着アイテム
-        =link_to "もっと見る ＞", class: "main-contents__header--more"
+          = "「"+params[:keyword]+"」"+" の検索結果"
       .main-contents__goods
         %ul
           - @products.each do |product|
@@ -37,162 +24,8 @@
                       %span= product.price
                     = image_tag product.image_url if product.image.present?
                   .contents-item__index
-                    .contents-item__index--name 
+                    .contents-item__index--name
                       %span= product.name
-      .main-contents__header
-        .main-contents__header--name
-          メンズ新着アイテム
-        =link_to "もっと見る ＞", class: "main-contents__header--more"
-      .main-contents__goods
-        %ul
-          %li
-            .main-contents-box
-              = link_to "#", class: "contents-item" do
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-      .main-contents__header
-        .main-contents__header--name
-          家電・スマホ・カメラ新着アイテム
-        =link_to "もっと見る ＞", class: "main-contents__header--more"
-      .main-contents__goods
-        %ul
-          %li
-            .main-contents-box
-              = link_to "#", class: "contents-item" do
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-      .main-contents__header
-        .main-contents__header--name
-          おもちゃ・ホビー・グッズ新着アイテム
-        =link_to "もっと見る ＞", class: "main-contents__header--more"
-      .main-contents__goods
-        %ul
-          %li
-            .main-contents-box
-              = link_to root_path, class: "contents-item" do
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-  .top-nav
-    .Category
-      人気のブランド
-    %ul.Categorys
-      %li
-        =link_to "タグ・ホイヤー", class: "Categorys__list--item"
-      %li
-        =link_to "PRADA", class: "Categorys__list--item"
-      %li
-        =link_to "Hamilton", class: "Categorys__list--item"
-      %li
-        =link_to "FENDI", class: "Categorys__list--item"
-  .main-body
-    .main-contents
-      .main-contents__top
-        .main-contents__header--name
-          タグ・ホイヤー新着アイテム
-        =link_to "もっと見る ＞", class: "main-contents__header--more"
-      .main-contents__goods
-        %ul
-          %li
-            .main-contents-box
-              = link_to root_path, class: "contents-item" do
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span 粉雪舞う季節はいつもすれ違い人混みに紛れても同じ空見てるのに。風に吹かれて似たように凍えるのに。些細な言い合いもなくてララライララライ
-          %li
-            .main-contents-box
-              = link_to root_path, class: "contents-item" do
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-          %li
-            .main-contents-box
-              = link_to root_path, class: "contents-item" do
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-          %li
-            .main-contents-box
-              = link_to root_path, class: "contents-item" do
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-          %li
-            .main-contents-box
-              = link_to root_path, class: "contents-item" do
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-      .main-contents__header
-        .main-contents__header--name
-          PRADA新着アイテム
-        =link_to "もっと見る ＞", class: "main-contents__header--more"
-      .main-contents__goods
-        %ul
-          %li
-            .main-contents-box
-              = link_to root_path, class: "contents-item" do
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-      .main-contents__header
-        .main-contents__header--name
-          Hamilton新着アイテム
-        =link_to "もっと見る ＞", class: "main-contents__header--more"
-      .main-contents__goods
-        %ul
-          %li
-            .main-contents-box
-              = link_to root_path, class: "contents-item" do
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
-      .main-contents__header
-        .main-contents__header--name
-          FENDI新着アイテム
-        =link_to "もっと見る ＞", class: "main-contents__header--more"
-      .main-contents__goods
-        %ul
-          %li
-            .main-contents-box
-              = link_to root_path, class: "contents-item" do
-                .contents-item__image
-                  .contents-item__image--price
-                    %span ¥1,000
-                .contents-item__index
-                  .contents-item__index--name 
-                    %span テスト
+
 = render 'layouts/footer'
 = render 'devise/shared/red-btn'
